<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffecb3"
    tools:context="com.example.android.sortinghat.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/houses" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/title" />

        <EditText
            android:id = "@+id/wizard_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:hint="Your name:"
            android:inputType="text"/>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_1_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_1_1" />

            <RadioButton
                android:id="@+id/answer_1_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_1_2" />

            <RadioButton
                android:id="@+id/answer_1_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_1_3" />

            <RadioButton
                android:id="@+id/answer_1_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_1_4" />

        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_2_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_2_1" />

            <RadioButton
                android:id="@+id/answer_2_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_2_2" />

            <RadioButton
                android:id="@+id/answer_2_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_2_3" />

            <RadioButton
                android:id="@+id/answer_2_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_2_4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_3_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_3_1" />

            <RadioButton
                android:id="@+id/answer_3_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_3_2" />

            <RadioButton
                android:id="@+id/answer_3_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_3_3" />

            <RadioButton
                android:id="@+id/answer_3_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_3_4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_4" />

        <RadioGroup
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_4_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_4_1" />

            <RadioButton
                android:id="@+id/answer_4_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_4_2" />

            <RadioButton
                android:id="@+id/answer_4_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_4_3" />

            <RadioButton
                android:id="@+id/answer_4_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_4_4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_5" />

        <RadioGroup
            android:id="@+id/question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_5_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_5_1" />

            <RadioButton
                android:id="@+id/answer_5_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_5_2" />

            <RadioButton
                android:id="@+id/answer_5_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_5_3" />

            <RadioButton
                android:id="@+id/answer_5_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_5_4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_6" />

        <RadioGroup
            android:id="@+id/question_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_6_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_6_1" />

            <RadioButton
                android:id="@+id/answer_6_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_6_2" />

            <RadioButton
                android:id="@+id/answer_6_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_6_3" />

            <RadioButton
                android:id="@+id/answer_6_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_6_4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionTheme"
            android:text="@string/question_7" />

        <RadioGroup
            android:id="@+id/question_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_7_1"
                style="@style/AnswerTheme"
                android:text="@string/answer_7_1" />

            <RadioButton
                android:id="@+id/answer_7_2"
                style="@style/AnswerTheme"
                android:text="@string/answer_7_2" />

            <RadioButton
                android:id="@+id/answer_7_3"
                style="@style/AnswerTheme"
                android:text="@string/answer_7_3" />

            <RadioButton
                android:id="@+id/answer_7_4"
                style="@style/AnswerTheme"
                android:text="@string/answer_7_4" />
        </RadioGroup>

        <Button
            style="@style/ButtonTheme"
            android:layout_gravity="center_horizontal"
            android:onClick="computeResult"
            android:text="Done!" />

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    style="@style/ButtonTheme"
                    android:onClick="sendMail"
                    android:text="Tell a friend!" />

                <Button
                    style="@style/ButtonTheme"
                    android:onClick="resetQuiz"
                    android:text="Reset" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
